--- a/environment.yml
+++ b/environment.yml
@@ -14,7 +14,6 @@ dependencies:
   - cython=0.29.14=py36he6710b0_0
   - dill=0.2.9=py36_0
   - idna=2.8=py36_0
-  - intel-openmp=2019.5=281
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
@@ -28,7 +27,7 @@ dependencies:
   - msgpack-python=0.5.6=py36h6bb024c_1
   - ncurses=6.1=he6710b0_1
   - openjdk=8.0.152=h46b5887_1
-  - openssl=1.1.1=h7b6447c_0
+  - openssl=1.1.1
   - pip=19.3.1=py36_0
   - pycparser=2.19=py_0
   - pyopenssl=19.1.0=py36_0
@@ -83,4 +82,4 @@ dependencies:
     - ujson==1.35
     - werkzeug==0.16.0
     - wrapt==1.10.11
-
+    - intel-openmp==2020.0.133
